@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow SSH user and port to be encoded in the hostname strings [Ezra Zygmuntowicz]
+
 * Fixed that new checkouts were not group-writable [DHH, Jamis Buck]
 
 * Fixed that cap setup would use 755 on the deploy_to and shared directory roots instead of 775 [DHH]
